@@ -10,26 +10,43 @@ import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.JsonFactory;
 import com.google.api.client.json.jackson2.JacksonFactory;
 import com.google.api.services.youtube.YouTube;
+import com.google.gdata.client.contacts.ContactsService;
 
-import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.security.GeneralSecurityException;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import static fr.docjyJ.googleTransfer.Lang.systemLog;
 
 public class GoogleOauth {
     private static final String CLIENT_SECRETS= "client_secret.json";
-    private static final Collection<String> SCOPES =
-            Collections.singletonList("https://www.googleapis.com/auth/youtube.force-ssl");
+    private static final Collection<String> SCOPES = List.of(
+            "https://www.googleapis.com/auth/youtube.force-ssl",
+            "https://www.google.com/m8/feeds/");
 
-    private static final String APPLICATION_NAME = "API code samples";
+    private static final String APPLICATION_NAME = "Google Transfer";
     private static final JsonFactory JSON_FACTORY = JacksonFactory.getDefaultInstance();
 
+    public static class Service{
+        YouTube youtubeService;
+        ContactsService contactsService;
 
-    public static Credential authorize(final NetHttpTransport httpTransport) throws IOException {
+        public Service(YouTube youtubeService, ContactsService contactsService) {
+            this.youtubeService = youtubeService;
+            this.contactsService = contactsService;
+        }
+
+        public YouTube getYoutubeService() {
+            return youtubeService;
+        }
+
+        public ContactsService getContactsService() {
+            return contactsService;
+        }
+    }
+
+    public static Credential authorize(final NetHttpTransport httpTransport) throws Exception {
         // Load client secrets.
         InputStream in = GoogleOauth.class
                 .getClassLoader().getResourceAsStream(CLIENT_SECRETS);
@@ -43,13 +60,22 @@ public class GoogleOauth {
         return new AuthorizationCodeInstalledApp(flow, new LocalServerReceiver()).authorize("user");
     }
 
-    public static YouTube getService(String info) throws GeneralSecurityException, IOException, InterruptedException {
+    public static Service getService(String info) throws Exception {
         systemLog(info);
         Thread.sleep(5000);
         final NetHttpTransport httpTransport = GoogleNetHttpTransport.newTrustedTransport();
         Credential credential = authorize(httpTransport);
-        return new YouTube.Builder(httpTransport, JSON_FACTORY, credential)
+
+        //Youtube
+        YouTube youtubeService = new YouTube.Builder(httpTransport, JSON_FACTORY, credential)
                 .setApplicationName(APPLICATION_NAME)
                 .build();
+
+        //Google Contacts
+        ContactsService contactsService = new ContactsService(APPLICATION_NAME);
+        contactsService.setOAuth2Credentials(credential);
+
+        return new Service(youtubeService,contactsService);
     }
+
 }
